--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dependencies": {
         "body-parser": "^1.15.2",
         "dotenv": "^8.2.0",
-        "express": "^4.12.4"
+        "express": "^4.12.4",
+        "mongodb": "",
+        "mongoose": "^5.10.15"
     },
     "engines": {
         "node": "12.*"
